# arxan-disabler

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-min-release.sh  build-staticlib-min.bat  build-staticlib-min.sh
.github/workflows/: checks.yml  release.yml
dll/: Cargo.toml
dll/src/: lib.rs
dylibs/dsr/: Cargo.toml
dylibs/dsr/src/: lib.rs
dylibs/launcher/: Cargo.toml
dylibs/launcher/src/: main.rs
examples/: dsr-arxan-disabler.rs
include/: arxan_disabler.h  arxan_stub_finder.h  arxan_stub_finder.hpp
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: build-staticlib-min.bat  build-staticlib-min.sh  gen-changelog.py
src/: arxan_visitor.rs  ffi.rs  lib.rs  main.rs  patch.rs  spider.rs  stub_patch.rs
src/disabler/: call_hook.rs  code_buffer.rs  common.rs  dsr.rs  game_specific.rs  mod.rs  steamstub.rs
src/vm/: memory.rs  mod.rs  registers.rs  util.rs
tests/: test_all.rs  test_dll.rs  test_spider.rs
