[package]
name = "dsr-arxan-disabler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
name = "dsr-arxan-disabler"
crate-type = ["cdylib"]

[features]
ffi = []

[dependencies]
pelite = "0.10"
iced-x86 = "1.21"
memchr = "2.7.4"
fxhash = "0.2.1"
indexmap = "2.7.1"
byteorder = "1.5.0"
bitvec = "1.0"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
dotenv = "0.15"
dll-syringe = "0.15"

[dev-dependencies.windows]
version = "0.60"
features = [
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Console"
]

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
debug = false
panic = "abort"