[workspace]
resolver = "2"
members = [".", "dylibs/dsr", "dylibs/launcher"]
default-members = [".", "dylibs/launcher"]

[workspace.package]
authors = ["William Tremblay"]
edition = "2021"

[package]
name = "arxan-disabler"
authors.workspace = true
edition.workspace = true
description = "Neuters Arxan in FromSoftware titles"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
ffi = []
disabler = ["windows"]
disabler-debug = ["disabler"]

[dependencies]
windows = { workspace = true, optional = true }
log.workspace = true
pelite = "0.10"
iced-x86 = "1.21"
memchr = "2.7.4"
fxhash = "0.2.1"
indexmap = "2.7.1"
bitvec = "1.0"

[workspace.dependencies]
log = "0.4"
simplelog = "0.12.2"

[workspace.dependencies.windows]
version = "0.60"
features = [
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Console"
]

[dev-dependencies]
simplelog = "0.12.2"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
debug = false
panic = "abort"