[package]
name = "arxan-disabler-dll"
description = "Neuters Arxan in various FromSoftware titles"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
simplelog.workspace = true
windows.workspace = true
arxan-disabler = { path = "..", version = "0.1.4", features = ["disabler-debug"] }