[package]
name = "arxan-disabler-dsr"
description = "Neuters Arxan in Dark Souls Remastered 1.3.1"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
simplelog.workspace = true
windows.workspace = true
arxan-disabler = { path = "../..", version = "0.1.0", features = ["disabler-debug"] }